crates/cuda-core/tests/derive_device_copy/fail_non_device_copy_field.stderr
error[E0277]: the trait bound `&'static u32: DeviceCopy` is not satisfied
 --> tests/derive_device_copy/fail_non_device_copy_field.rs:8:12
  |
8 |     value: &'static u32,
  |            ^^^^^^^^^^^^ the trait `DeviceCopy` is not implemented for `&'static u32`
  |
note: required by a bound in `assert_impl`
 --> tests/derive_device_copy/fail_non_device_copy_field.rs:6:23
  |
6 | #[derive(Copy, Clone, DeviceCopy)]
  |                       ^^^^^^^^^^ required by this bound in `assert_impl`
  = note: this error originates in the derive macro `DeviceCopy` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider removing the leading `&`-reference
  |
8 -     value: &'static u32,
8 +     value: u32,
  |
